--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Mental Map Tool - Prototyp für linguistische Perzeptions-Mapping"
+      content="VOICE Mental Maps - Variation Observed In Community Evaluations"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -17,7 +17,7 @@
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
      crossorigin=""/>
     
-    <title>Mental Map Tool</title>
+    <title>VOICE Mental Maps</title>
   </head>
   <body>
     <noscript>Sie müssen JavaScript aktivieren, um diese App zu verwenden.</noscript>
